Простое веб-приложение/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: nginx:1.26-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 3m
          limits:
            cpu: 10m
        volumeMounts:
        - name: nginx-html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-html-volume
        configMap:
          name: myapp-configmap
